עריכת הוצאה חוזרת
שליפה מהDB של הוצאות חוזרות על עצמכן בעריכת הוצאה

--- a/Client/Components/AddTransactionComponent.razor
+++ b/Client/Components/AddTransactionComponent.razor
@@ -14,6 +14,8 @@
 else
 {
     <h3>@overlayTitle</h3>
+    
+    repeatedBtnTitle = "עריכת הוצאה חוזרת";
 }
 
 <div>
@@ -64,7 +66,11 @@ else
             {
                 <p>שיטת תשלום נבחרת: @newTransaction.valueType</p>
             }
-            <button @onclick="repeatingTransOverlay">הגדרת ההוצאה כחוזרת</button>@* לעשות קומפוננטה של חלון הגדרת הוצאה כחוזרת*@
+            <button @onclick=@(async () => await repeatingTransOverlay())>@repeatedBtnTitle</button>@* לעשות קומפוננטה של חלון הגדרת הוצאה כחוזרת*@
+          
+            @if(newTransaction.fixedMonthly == true) // עריכת הוצאה חוזרת
+            {
+
             @if (returningTrans)
             {
                 <h4>הגדרת @newTransaction.transTitle כהוצאה חוזרת על עצמה</h4>
@@ -81,7 +87,96 @@ else
                         <div>
                             @if(GetCurrentMonth() == month)
                             {
-                                                    <label style="@(GetCurrentMonth() == month ? "background-color: cornflowerblue;" : "")">@GetHebrewMonthName(month)</label>
+                                <label style="@(GetCurrentMonth() == month ? "background-color: cornflowerblue;" : "")">@GetHebrewMonthName(month)</label>
+                                  <input type="text"
+                   disabled value="@GetDefaultValue(month)" @oninput="eventArgs => HandleInput(eventArgs, month)" />
+                        
+                            }
+                            else
+                            {
+                                <label>@GetHebrewMonthName(month)</label>
+                                @foreach (RepeatedTransToShow reTrans in reapeatedTransValuesList)
+                                {
+                                    @if (reTrans.transDate.ToString("MMMM") == month)
+                                    {
+                                         <input type="text" disabled="@IsPastMonth(month)" value="@reTrans.transValue" @oninput="eventArgs => HandleInput(eventArgs, month)" />
+                                    }
+                                    else
+                                    {
+                                        <input type="text" disabled="@IsPastMonth(month)" value="0" @oninput="eventArgs => HandleInput(eventArgs, month)" />
+                                    }
+                                }
+                               
+                            }
+                            
+                        </div>
+                    }
+
+                    <button>שמירה וחזרה</button>
+                    <button @onclick="() => resetMonthValues = !resetMonthValues">איפוס סכומים חוזרים</button>
+                }
+                else
+                {   
+                    @if(!isValueTypedAfterReset)
+                    {
+                        @foreach (TransactionToAdd tToCheck in transactionsToAdd)
+                        {
+                            tToCheck.transValue = 0;
+                        }
+                    }
+                   
+                    @foreach (string month in months)
+                    {
+                        <div>
+                            <label style="@(GetCurrentMonth() == month ? "background-color: cornflowerblue;" : "")">@GetHebrewMonthName(month)</label>
+
+                            @if(GetCurrentMonth() != month)
+                            {
+                                  <input type="text"
+                   disabled="@IsPastMonth(month)" value="0" @oninput="eventArgs => HandleInput(eventArgs, month)" />
+                        
+                            }
+                            else
+                            {
+                                 <input type="text"
+                   disabled value="@GetDefaultValue(month)" @oninput="eventArgs => HandleInput(eventArgs, month)" />
+                            }
+                         </div>
+                    }
+
+                    @if (isValueTyped)
+                {
+                    <button>שמירה וחזרה</button>
+                }
+                else
+                {
+                    <button disabled>שמירה וחזרה</button>
+                    <button @onclick="() => resetMonthValues = !resetMonthValues">לסכומים המקוריים</button>
+
+                }
+                }             
+            }
+        }
+
+        else
+        {
+            @if (returningTrans)
+            {
+                <h4>הגדרת @newTransaction.transTitle כהוצאה חוזרת על עצמה</h4>
+                <p>במידה וההוצאה חוזרת בסכום שונה, יש להזין את הסכום הרצוי. בחודש בו אינה חוזרת, יש להזין 0.</p>
+                @if (resetMonthValues == false)
+                {
+                    @foreach(TransactionToAdd tToCheck in transactionsToAdd)
+                    {
+                        tToCheck.transValue = newTransaction.transValue;
+                    }
+
+                    @foreach (string month in months)
+                    {
+                        <div>
+                            @if(GetCurrentMonth() == month)
+                            {
+                                <label style="@(GetCurrentMonth() == month ? "background-color: cornflowerblue;" : "")">@GetHebrewMonthName(month)</label>
                                   <input type="text"
                    disabled value="@GetDefaultValue(month)" @oninput="eventArgs => HandleInput(eventArgs, month)" />
                         
@@ -128,8 +223,6 @@ else
                          </div>
                     }
 
-                  
-
                     @if (isValueTyped)
                 {
                     <button>שמירה וחזרה</button>
@@ -142,12 +235,22 @@ else
                 }
                 }
                 
-               
-                
+
             }
+
+        }
+
         </div>
     }
 
+
+
+
+
+        </div>
+}
+
+<div>
     <button @onclick="@(async () => await getAllUserTags())">הגדרות מתקדמות</button>
 
     @if (isButtomDropDownOpen)
@@ -300,12 +403,13 @@ else
     List<OverBudgetToShow> closeOverdraftOpts = new List<OverBudgetToShow>();
     List<OverDraftBudgetToEdit> budgetToUpdate = new List<OverDraftBudgetToEdit>();
     List<TagsToShow> allUserTags = new List<TagsToShow>();
+    List<RepeatedTransToShow> reapeatedTransValuesList = new List<RepeatedTransToShow>();
 
     TagsToShow chosenTag = new TagsToShow();
     OverBudgetToShow chosenSubCategory = new OverBudgetToShow();
     OverBudgetToShow overDraftSubCategory = new OverBudgetToShow();
     OverDraftBudgetToEdit subCategoryBudgetToUpdate = new OverDraftBudgetToEdit();
-
+    TransactionOverviewToShow editedTransaction = new TransactionOverviewToShow();
 
     private DateTime? selectedDate = DateTime.Today; // Initialize selectedDate to today
     private bool isItAnewTrans = false;
@@ -319,6 +423,7 @@ else
     private int selectedNumber = 1; // Default value
     double currentGap = 0;
     public string overlayTitle = "";
+    public string repeatedBtnTitle = "הגדרת ההוצאה כחוזרת";
     //string clikckedTag => isTagClicked ? "border: solid,0.1em,black" : "border:none";
     bool returningTrans = false;
 
@@ -538,7 +643,7 @@ else
             TransactionToEdit postEditTrans = await transEditRes.Content.ReadFromJsonAsync<TransactionToEdit>();
             if (postEditTrans != null)
             {
-                TransactionOverviewToShow editedTransaction = new TransactionOverviewToShow();
+               
                 editedTransaction.id = postEditTrans.id;
                 editedTransaction.transValue = postEditTrans.transValue;
                 editedTransaction.transType = postEditTrans.transType;
@@ -695,8 +800,24 @@ else
     private DateTime parsedDate;
     private bool attemptedParsing = false;
 
-    public void repeatingTransOverlay()
+    public async Task repeatingTransOverlay()
     {
+        if (newTransaction.fixedMonthly == true)
+        {
+
+            var repeatedTransValuesRes = await Http.GetAsync("api/Transactions/getRepeatedTransToEdit/" + transIDtoEdit);
+
+            if (repeatedTransValuesRes.IsSuccessStatusCode)
+            {
+                reapeatedTransValuesList = repeatedTransValuesRes.Content.ReadFromJsonAsync<List<RepeatedTransToShow>>().Result;
+            }
+            else
+            {
+                Console.WriteLine("repeated Trans values failed");
+            }
+
+        }
+
         returningTrans = !returningTrans;
         transactionsToAdd = new List<TransactionToAdd>();
         int currentDay = DateTime.Now.Day;
@@ -743,11 +864,18 @@ else
         for (int i = transactionsToAdd.Count - 1; i >= 0; i--)
         {
             TransactionToAdd repT = transactionsToAdd[i];
+            if (repT.transValue > 0)
+            {
+                repT.parentTransID = parentTransID;
+                repT.tagID = newTransaction.tagID;
+                repT.tagColor = newTransaction.tagColor;
+                repT.tagTitle = newTransaction.tagTitle;
+            }
 
             if (transactionsToAdd[i].transValue<=0)
-{
+            {
                 transactionsToAdd.RemoveAt(i);
-}            
+            }            
         }
 
         foreach (TransactionToAdd repT in transactionsToAdd)
